SERVER-49771 Add move assignment operator to reverse_radix_iterator